# Sift

./: .env.example  .gitignore  COMMERCIAL-LICENSE.md  LICENSE  LICENSE-DOCS.md  README.md  README.zh-CN.md  app.py  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  run.sh  vite.config.ts
.github/workflows/: ci.yml
backend/: __init__.py
backend/sift_core/: __init__.py  ai.py  constants.py  importer.py  jobs.py  models.py  storage.py
backend/siftd/: __init__.py  main.py
docs/: architecture.md  release-management.md
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: App.tsx  AppErrorBoundary.tsx  apiClient.ts  i18n.ts  mockData.ts  state.test.ts  state.ts  storage.ts  types.ts  userProfile.test.ts  userProfile.ts
src/components/: AppToolbar.tsx  LogoSymbols.tsx  Modal.tsx  StatusBar.tsx  TitleBar.tsx  UserAvatar.tsx
src/features/ai/: AiOrganizeModal.tsx
src/features/commands/: CommandPalette.tsx
src/features/export/: ExportModal.tsx
src/features/people/: PeopleView.tsx  RegisterPersonModal.tsx
src/features/profile/: ProfileModal.tsx
src/features/projects/: ProjectCard.tsx  ProjectsSheet.tsx  RecentlyDeletedSheet.tsx  WelcomeView.test.tsx  WelcomeView.tsx  desktopImport.ts  imageMetadata.ts  localImport.ts  projectOrdering.test.ts  projectOrdering.ts  thumbnails.ts
src/features/settings/: SettingsModal.test.tsx  SettingsModal.tsx  faceReferences.ts  updateCheck.ts
src/styles/: app-extension.css  app.css
static/css/: app.css
static/js/: app.js
templates/: index.html
tests/: ai_test.py  importer_test.py  jobs_test.py  storage_test.py
