[project]
name = "sift"
version = "0.1.0-alpha.2"
description = "Local-first desktop photo culling core and sidecar service."
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pillow>=10.4"
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pyinstaller>=6.11"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
