[package]
name = "sift"
version = "0.1.1"
description = "Source-available noncommercial desktop photo culling app"
authors = ["Sift contributors"]
license-file = "../LICENSE"
repository = "https://github.com/chencn2020/Sift"
edition = "2021"

[lib]
name = "sift_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
